# casper-ignite

./: .env.example  DEPLOYMENT_CHECKLIST.md  ENV_SETUP_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  PRODUCTION_READINESS.md  QUICK_DEPLOY.md  README.md  README_SETUP.md  TESTING_GUIDE.md  TESTNET_DEPLOYMENT.md  VERCEL_DEPLOY.md  contracts.md  deploy-amm.sh  description.md  next.config.ts  out.txt  package.json  pnpm-lock.yaml  prisma.config.ts  smartcontract.md  smartcontractandstructure.md  tailwind.config.ts  vitest.config.ts
contracts/: .gitignore  DEPLOYMENT.md  Makefile  deploy-amm.sh  deploy-testnet.sh
contracts/amm/: Cargo.toml
contracts/amm-session/: Cargo.toml
contracts/amm-session/src/: buy.rs  deposit.rs
contracts/session/: Cargo.toml
contracts/session/src/: main.rs
prisma/: schema.prisma  seed.ts
public/contracts/: README.md  (+3 more)
scripts/: check-balance-direct.ts  check-balance.js  check-deploy-status.ts  check-deployer-account.ts  check-hash.js  check-latest-project.js  check-nonce.ts  cleanup-projects.js  convert-pem-to-hex.ts  debug-account.ts  debug-cep18-args.js  debug-deploy-json.ts  debug-project.ts  deploy-amm.mjs  deploy-launchpad.mjs  deploy-orderbook.mjs  deposit-amm-reserve.mjs  get-amm-hash.mjs  get-launchpad-hash.mjs  get-orderbook-hash.mjs  initialize-amm.mjs  inspect-pk.ts  inspect-rpc-client.ts  setup-test-env.sh  test-args.ts  test-casper-deploy.ts  test-deploy-manual.js  test-deploy-v2.ts  test-deploy.ts  test-full-deploy.ts  test-testnet-flow.ts  update-project-token.js  verify-keypair.ts
src/: middleware.ts
(+122 files in other folders)
