[package]
name = "amm-session"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = "5.1.1"
casper-types = "6.0.1"
base64ct = "=1.7.2"

[[bin]]
name = "amm_buy_session"
path = "src/buy.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "amm_deposit_session"
path = "src/deposit.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
